--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ dependencies = [
     "edge-tts>=7.0.1",
     "numpy>=2.2.5",
     "openai-whisper>=20240930",
+    "openvr>=2.5.102",
+    "python-osc>=1.9.3",
     "requests>=2.32.3",
     "sounddevice>=0.5.1",
     "soundfile>=0.13.1",
